small change on presentation

--- a/presentation/tinytest2JUnit_09May23.Rmd
+++ b/presentation/tinytest2JUnit_09May23.Rmd
@@ -28,7 +28,7 @@ output:
 <br>
 
 * Applicability for Jenkins?
-* Jenkins uses XML file format to report about the test suite execution
+* Jenkins uses JUnit XML  format to report about the test suite execution
 * Tinytest has no build in reporter for JUnit format:
 
   **-> Tinytest2JUnit**
